--- a/src/Top.css
+++ b/src/Top.css
@@ -1,11 +1,51 @@
 .container {
     display: flex;
     align-items: center;
-    cursor: pointer;
+    padding: 10px;
+    background-color: #272727;
     color: white;
-}
-  
+    height: 30px;
+    border: 1px solid #323232;
+  }  
+
 .archive {
     margin-left: 20px;
     margin-right: 50px;
+}
+
+.searcher{
+    width: 80%;
+    height: 80%;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+  
+.search-bar {
+    display: grid;
+    grid-template-columns: 2fr 8fr;
+    align-items: center;
+}
+  
+.search-icon img {
+    width: 100%; /* Adjust the width as needed */
+    height: auto;
+    margin-right: 8px; /* Adjust the spacing between the icon and input */
+}
+  
+.search-input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+
+    border-radius: 15px;
+}
+.profileImg{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 10px 10px 10px 10px
 }
