--- a/src/OpenedChat.css
+++ b/src/OpenedChat.css
@@ -3,3 +3,32 @@
     padding: 20px;
     background-color: blue;
   }
+
+.openedChatTop{
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+}
+.openedChatImg{
+  margin: 20px 20px 0px 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 60px;
+}
+.openedChatText{
+  color: white;
+  margin: 0px 0px 10px 0px;
+  font-size: medium;
+}
+.state{
+  opacity: 0.4;
+}
+.openedChatState{
+  color: rgb(137, 137, 137);
+}
+
+.openedChatTextsContainer{
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px
+}
