--- a/src/Top.css
+++ b/src/Top.css
@@ -6,7 +6,7 @@
     color: white;
     height: 30px;
     border: 1px solid #323232;
-  }  
+}  
 
 .archive {
     margin-left: 20px;
@@ -27,6 +27,7 @@ body {
 .search-bar {
     display: grid;
     grid-template-columns: 2fr 8fr;
+    justify-content: space-between;
     align-items: center;
 }
   
@@ -37,15 +38,26 @@ body {
 }
   
 .search-input {
-    width: 100%;
+    width: 120%;
     padding: 8px;
     box-sizing: border-box;
 
     border-radius: 15px;
 }
 .profileImg{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
-    margin: 10px 10px 10px 10px
+    margin: 0px 70px 10px 10px;
+}
+
+.profile-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 20px 5px 0px;
+}
+
+.topSvg:hover {
+    cursor: pointer;
+    scale: 1.1;
 }
